# MA8702

project_1_MCMC_techniques/: main.typ  refs.bib  report.typ  template.typ
project_1_MCMC_techniques/code/: README.md  matplotlibrc  pyproject.toml  run_all_experiments.sh
project_1_MCMC_techniques/code/scripts/: .gitignore  densities.py  hamiltonian.py  inference.py  langevin.py  mcmc.py  random_walk.py  rwmh.py  tuning_experiment.py  utils.py  visualization.py
project_1_MCMC_techniques/code/src/mcmc/: __init__.py  inference.py  random_walk.py  tuning_experiment.py
project_1_MCMC_techniques/code/stan/: .gitignore  model.R  pump.stan
project_1_MCMC_techniques/code/tasks/: 12.py  hmc_chain.py  langevin_chain.py  rwmh_chain.py
project_1_MCMC_techniques/report/: main.typ  template.typ
variational_inference_presentation/: presentation.typ  refs.bib
variational_inference_presentation/vi/: .gitignore  matplotlibrc  pyproject.toml
variational_inference_presentation/vi/docs/: advi.md
variational_inference_presentation/vi/examples/: bayesian_logistic_regression.py  bbvi_gmm.py  bbvi_logistic.py  cavi_gaussian.py  cavi_gmm.py  data.py  gmm.py  run.py  run_multivariate.py  utils.py  vae_gmm_sketch.py
variational_inference_presentation/vi/src/vi/: __init__.py  advi_multivariate.py  bbvi.py  cavi.py  cavi_multivariate.py  data.py  gmm.py
variational_inference_presentation/vi/src/vi/mcmc/: __init__.py  hamiltonian.py
