[project]
name = "code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "jax>=0.8.2",
  "matplotlib>=3.10.8",
  "numpy>=2.4.0",
  "scipy>=1.16.3",
  "tqdm>=4.67.1",
]

[dependency-groups]
dev = ["ty>=0.0.9"]

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.pyright]
venvPath = "."
venv = ".venv"
