[project]
name = "mcmc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "jax[cuda13]>=0.8.2",
  "matplotlib>=3.10.8",
  "numpy>=2.4.0",
  "pathlib>=1.0.1",
  "scipy>=1.16.3",
  "tqdm>=4.67.1",
]

[dependency-groups]
dev = ["ipykernel>=7.1.0", "ty>=0.0.9"]

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.pyright]
venvPath = "."
venv = ".venv"
