[project]
name = "vi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Elling Svee", email = "86355496+ellingsvee@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "jax>=0.9.0.1",
    "matplotlib>=3.10.8",
    "optax>=0.2.4",
]

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"
