[project]
name = "vi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
  { name = "Elling Svee", email = "86355496+ellingsvee@users.noreply.github.com" },
]
requires-python = ">=3.13"
dependencies = [
  "jax[cuda13]>=0.9.0.1",
  "matplotlib>=3.10.8",
  "optax>=0.2.4",
  "scikit-learn>=1.8.0",
  "tabulate>=0.9.0",
  "tqdm>=4.67.3",
]

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["ipykernel>=7.2.0"]

[tool.pyright]
venvPath = "."
venv = ".venv"
